Clipboard OSC52 settings for tmux

--- a/base/.tmux.conf
+++ b/base/.tmux.conf
@@ -16,6 +16,9 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# osc52, allow any applications to set TMUX clipboard
+set -s set-clipboard on
+
 set-option -g status-position top
 
 # List of plugins
