--- a/base/.config/starship.toml
+++ b/base/.config/starship.toml
@@ -2,6 +2,7 @@ format = """
 [░▒▓](#a3aed2)\
 [ 󰣇 ](bg:#a3aed2 fg:#090c0c)\
 $hostname\
+$container\
 [](bg:#769ff0 fg:#a3aed2)\
 $directory\
 [](fg:#769ff0 bg:#394260)\
@@ -29,6 +30,10 @@ format = '[$hostname]($style)'
 disabled = false
 style = "bg:#a3aed2 fg:#090c0c"
 
+[container]
+format = '[ 󰡨]($style)'
+style = "bold fg:#fa6467 bg:#a3aed2"
+disabled = false
 
 [directory]
 style = "fg:#e3e5e5 bg:#769ff0"
